# gen-aac

./: README.md  config.yaml  pyproject.toml
demo/: app.py  functions.py  gallery.py  make_default_user_data.py  user_data.py
demo/widgets/: __init__.py  gallery.py  gallery_view.py  login.py  sentence_widget.py  symbol_icon.py  transfer.py  widgets.py
docs/: genaac.md  utils.md
genaac/: __init__.py  aac_collage.py  aac_from_image.py  aac_from_keyword.py  aac_syntax.py  config.py  convert_keyword.py  models.py  symbol_generation.py  token_editing.py  token_imaging.py  tokenize.py  tokenizing.py
genaac/utils/: __init__.py  banana.py  gcp_data_client.py  image.py  imagen_client.py  llm.py  llm_client.py  nano_banana.py
prompt/: aac_from_image.md  aac_from_keyword.md  aac_symbol_guideline.md  tokenizing.md
prompts/: basic_symbol_pairs.json  symbol_generation.md  token_editing_prompt.md  token_imaging_prompt.md  tokenizing_prompt.md
tests/: test_aac_collage.py  test_aac_from_image.py  test_aac_from_keyword.py  test_aac_syntax.py  test_image_generation.py  test_token_editing.py  test_token_imaging.py  test_tokenize.py  test_tokenizing.py
tests/utils/: gcp_data_client.py  imagen_client.py  llm_client.py  test_banana.py  test_gcp_data_client.py  test_imagen_client.py  test_llm_client.py
