[project]
name = "gen-aac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.6.0",
    "google-genai>=1.51.0",
    "ipykernel>=7.1.0",
    "litellm>=1.80.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "st-clickable-images>=0.0.3",
    "streamlit>=1.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genaac"]
